[CSS] Fix input file width on mobile

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -344,9 +344,9 @@ main nav .sidebar-section-list li.duplicates > a > span:first-of-type {
 }
 
 input[type='file'] {
-    background-color: transparent;
-    padding-left: 0;
+    padding: 0;
     border: 0;
-    color: inherit;
     height: auto;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
