--- a/client/themes/default/forms.css
+++ b/client/themes/default/forms.css
@@ -27,6 +27,11 @@ textarea:focus,
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
 
+input[type='file'] {
+    background-color: transparent;
+    color: inherit;
+}
+
 select {
     -webkit-appearance: none;
     -moz-appearance: none;
